--- a/requirements.txt
+++ b/requirements.txt
@@ -66,6 +66,7 @@ parso==0.8.3
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==9.5.0
+pip==23.1
 pkgutil_resolve_name==1.3.10
 platformdirs==3.2.0
 prompt-toolkit==3.0.38
