--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ emoji==2.2.0
 googletrans==3.1.0a0
 huggingface-hub==0.13.4
 lxml==4.9.2
-python==3.8
-pandas==1.5.3
+python
+pandas
 Pillow==9.5.0
 pip==23.1
 pyarrow==11.0.0
